# MacondoOS

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: common_c_cxx_flags.cmake  utils.cmake
include/: ctype.h  ctype.hpp  defs.h  defs.hpp  errno.h  linux_debug.h  stdlib.h  string.h  string.hpp  strings.h
include/asm/: cpu.h  defs.h  page.h  syscall.h  types.h
include/fs/ext2/: ext2_fs.h
include/hal/: device.h
include/macondo/: defs.h  page.h  spin_lock.h  stdio.h
include/peripherals/: bcm2711.h
include/sys/: types.h
lib/: CMakeLists.txt
lib/libc/: CMakeLists.txt
lib/libc/aarch64/cmake/: build_flags.cmake
lib/libc/common/: ctype.c  errno.c  string.c  strings.c
lib/libc/common/stdio/: vsnprintf.c  vsnprintf.cpp
lib/libc/common/stdlib/: malloc.cpp
lib/libc/common/string/: strerror.c  string.c  strings.c
lib/libc/ia32e/cmake/: build_flags.cmake
lib/libcppabi/: CMakeLists.txt
lib/libcppabi/ia32e/cmake/: build_flags.cmake
lib/libcppabi/src/: guard.cc  typeinfo.cc
libcxxabi/: CMakeLists.txt  xca_guard.cpp
libcxxabi/src/: xca_guard.cpp
libstdc++/: CMakeLists.txt
libstdc++/include/bits/: stl_atomic_internal.h  stl_memory_internal.h  stl_type_traits_internal.h  stl_utility_internal.h
libstdc++/include/internal/: stl_atomic_internal.h  stl_base_internal.h  stl_iterator_internal.h  stl_memory_internal.h  stl_type_traits_internal.h  stl_utility_internal.h
stdlib/: CMakeLists.txt  cstring.cpp
test/: CMakeLists.txt
test/cstring/: bcmp_test.cpp  bzero_test.cpp  ffs_test.cpp  memccpy_test.cpp  memchr_test.cpp  memcmp_test.cpp  memcpy_test.cpp  memmove_test.cpp  mempcpy_test.cpp  memrchr_test.cpp  memset_test.cpp  stpcpy_test.cpp  stpncpy_test.cpp  strcasecmp_test.cpp  strcat_test.cpp  strchr_test.cpp  strcmp_test.cpp  strcpy_test.cpp  strcspn_test.cpp  strdup_test.cpp  strerror_test.cpp  strlcat_test.cpp  strlcpy_test.cpp  strlen_test.cpp  strlvr_test.cpp  strncasecmp_test.cpp  strncat_test.cpp  strncmp_test.cpp  strncpy_test.cpp  strndup_test.cpp  strnlen_test.cpp  strpbrk_test.cpp  strrchr_test.cpp  strrev_test.cpp  strspn_test.cpp  strstr_test.cpp  strtok_r_test.cpp  strtok_test.cpp  strupr_test.cpp
test/ctype/: ctype_test.cpp  isalnum_test.cpp  isalpha_test.cpp  isascii_test.cpp  isblank_test.cpp  iscntrl_test.cpp  isdigit_test.cpp  isgraph_test.cpp  islower_test.cpp  isprint_test.cpp  ispunct_test.cpp  isspace_test.cpp  isupper_test.cpp  isxdigit_test.cpp  toascii_test.cpp  tolower_test.cpp  toupper_test.cpp
test/stdio/: snprintf_test.cpp
